@@ -29,13 +29,11 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 import java.util.logging.FileHandler;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 
 import javax.swing.JButton;
 import javax.swing.JComboBox;
@@ -64,7 +62,6 @@ import com.jgoodies.forms.layout.FormLayout;
 import de.bielefeld.umweltamt.aui.AbstractModul;
 import de.bielefeld.umweltamt.aui.SettingsManager;
 import de.bielefeld.umweltamt.aui.gui.CredentialsDialog;
-import de.bielefeld.umweltamt.aui.mappings.elka.Abaverfahren;
 import de.bielefeld.umweltamt.aui.mappings.elka.Referenz;
 import de.bielefeld.umweltamt.aui.mappings.elka_sync.EAbwasserbehandlungsanlage;
 import de.bielefeld.umweltamt.aui.mappings.elka_sync.EAdresse;
@@ -123,8 +120,6 @@ public class ELKASync extends AbstractModul {
     private EEntwaesserungsgrundstueckModel entwgrundModel;
     private ESonderbauwerkModel sbModel;
 
-    private List<?> currentTableMappings;
-
     private JTable dbTable;
     private JLabel rowCount;
     private JLabel progressCounter;
@@ -161,8 +156,6 @@ public class ELKASync extends AbstractModul {
             }
             @Override
             protected void doNonUILogic() throws RuntimeException {
-                // TODO Auto-generated method stub
-
                 ELKASync.this.adresseModel.setList(
                         prependIdentifierAdresse(EAdresse.getAll()));
                 ELKASync.this.rowCount.setText(String.valueOf(
@@ -253,7 +246,6 @@ public class ELKASync extends AbstractModul {
                                 ELKASync.this.einleitungsstelleModel.setList(
                                         prependIdentifierEinleitungsstelle(
                                             EEinleitungsstelle.getAll()));
-                                currentTableMappings = EEinleitungsstelle.getAll();
                                 ELKASync.this.einleitungsstelleModel.fireTableDataChanged();
                             } else if (item.equals("Messstellen")) {
                                 ELKASync.this.dbTable
@@ -841,13 +833,13 @@ public class ELKASync extends AbstractModul {
      * Checks an entity for connected reference entities and sends them to the given Server
      * @param Entity
      */
-    public void sendReferences(Object entity, PrintStream log) {
+    public void sendReferences(Entity<?> entity, PrintStream log) {
         try {
             //Obtain original mapping instance from entity
-            Method getEntity = entity.getClass().getMethod("getEntity");
-            Object mappingInstance = getEntity.invoke(entity);
+            Object mappingInstance = entity.getEntity();
             //Get attached references
             Method getRefrenzs = mappingInstance.getClass().getMethod("getReferenzs");
+            @SuppressWarnings("unchecked")
             List<Referenz> referenzs = (List<Referenz>) getRefrenzs.invoke(mappingInstance);
             if (referenzs.size() > 0) {
                 JerseyClient client = new JerseyClientBuilder().build();
@@ -1126,7 +1118,7 @@ public class ELKASync extends AbstractModul {
                 object.getClass().getMethod("setOrigNr", Integer.class).invoke(object, nr);
             }
             String newNr = IDENTIFIER + nr.toString();
-            Integer newBI = new Integer(newNr);
+            Integer newBI = Integer.valueOf(newNr);
             mSetter.invoke(object, newBI);
         } catch (NoSuchMethodException e){
         } catch (SecurityException e) {
