@@ -67,9 +67,7 @@ import de.bielefeld.umweltamt.aui.AbstractModul;
 import de.bielefeld.umweltamt.aui.GUIManager;
 import de.bielefeld.umweltamt.aui.HauptFrame;
 import de.bielefeld.umweltamt.aui.mappings.DatabaseQuery;
-import de.bielefeld.umweltamt.aui.mappings.atl.Einheiten;
 import de.bielefeld.umweltamt.aui.mappings.basis.Gemarkung;
-import de.bielefeld.umweltamt.aui.module.common.tablemodels.EditorEinheitenModel;
 import de.bielefeld.umweltamt.aui.module.common.tablemodels.EditorGemarkungModel;
 import de.bielefeld.umweltamt.aui.utils.AuikLogger;
 import de.bielefeld.umweltamt.aui.utils.SwingWorkerVariant;
@@ -143,13 +141,13 @@ public class EditorGemarkungen extends AbstractModul {
                     SwingWorkerVariant worker = new SwingWorkerVariant(getResultTable()) {
                         @Override
                         protected void doNonUILogic() {
-                            ((EditorGemarkungModel)getTableModel()).setList(
+                            getTableModel().setList(
                                 DatabaseQuery.getGemarkungenlist());
                         }
 
                         @Override
                         protected void doUIUpdateLogic(){
-                            ((EditorGemarkungModel)getTableModel()).fireTableDataChanged();
+                            getTableModel().fireTableDataChanged();
                             frame.changeStatus(+ getTableModel().getRowCount() + " Objekte gefunden");
                         }
                     };
@@ -177,7 +175,7 @@ public class EditorGemarkungen extends AbstractModul {
     /* (non-Javadoc)
      * @see de.bielefeld.umweltamt.aui.module.common.AbstractQueryModul#getTableModel()
      */
-    public ListTableModel getTableModel() {
+    public ListTableModel<Gemarkung> getTableModel() {
         if (tmodel == null) {
             tmodel = new EditorGemarkungModel();
         }
@@ -305,7 +303,7 @@ public class EditorGemarkungen extends AbstractModul {
                     }
                 }
             };
-            this.resultLoeschAction.putValue(Action.MNEMONIC_KEY, new Integer(
+            this.resultLoeschAction.putValue(Action.MNEMONIC_KEY, Integer.valueOf(
                 KeyEvent.VK_L));
             this.resultLoeschAction.putValue(Action.ACCELERATOR_KEY,
                 KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, 0, false));
