@@ -62,24 +62,19 @@
 package de.bielefeld.umweltamt.aui.module.common.editors;
 
 import java.awt.Color;
-import java.awt.Component;
-import java.awt.Container;
 import java.awt.Dimension;
-import java.awt.FocusTraversalPolicy;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.ComponentEvent;
 import java.awt.event.FocusAdapter;
 import java.awt.event.FocusEvent;
 import java.awt.event.KeyEvent;
-import java.awt.event.MouseAdapter;
 import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.sql.Timestamp;
-import java.text.DecimalFormat;
 import java.text.NumberFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -105,7 +100,6 @@ import javax.swing.JComponent;
 import javax.swing.JFileChooser;
 import javax.swing.JFormattedTextField;
 import javax.swing.JLabel;
-import javax.swing.JPanel;
 import javax.swing.JScrollPane;
 import javax.swing.JTable;
 import javax.swing.JTextArea;
@@ -188,7 +182,9 @@ public class ProbenEditor extends AbstractApplyEditor {
 
     private double personalkosten = -1;
 
-    private class ParameterModel extends EditableListTableModel {
+    private class ParameterModel
+        extends EditableListTableModel<Analyseposition> {
+
         private static final long serialVersionUID = 6042681141925302970L;
         private Probenahme probe;
         private boolean isNew;
@@ -231,7 +227,7 @@ public class ProbenEditor extends AbstractApplyEditor {
                         params[i] = Parameter.findById(paramIDs[i]);
                     }
                     String analyse_von = "OWL-Umwelt";
-                    setList(new ArrayList<Object>());
+                    setList(new ArrayList<Analyseposition>());
                     for (Parameter param : params) {
                         addParameter(param,
                             DatabaseConstants.ATL_EINHEIT_MG_KG,
@@ -245,7 +241,7 @@ public class ProbenEditor extends AbstractApplyEditor {
                             DatabaseConstants.ATL_PARAMETER_ID_TEMPERATUR)
                     };
                     String analyse_von = "Betriebslabor";
-                    setList(new ArrayList<Object>());
+                    setList(new ArrayList<Analyseposition>());
                     for (Parameter param : params) {
                         addParameter(param,
                             param.getEinheiten(),
@@ -261,7 +257,7 @@ public class ProbenEditor extends AbstractApplyEditor {
                             DatabaseConstants.ATL_PARAMETER_ID_LEITFAEHIGKEIT)
                     };
                     String analyse_von = "360.33";
-                    setList(new ArrayList<Object>());
+                    setList(new ArrayList<Analyseposition>());
                     for (Parameter param : params) {
                         addParameter(param,
                             param.getEinheiten(),
@@ -273,9 +269,8 @@ public class ProbenEditor extends AbstractApplyEditor {
         }
 
         @Override
-        public Object getColumnValue(Object objectAtRow, int columnIndex) {
+        public Object getColumnValue(Analyseposition pos, int columnIndex) {
             Object value;
-            Analyseposition pos = (Analyseposition) objectAtRow;
             switch (columnIndex) {
                 // Parameter
                 case 0:
@@ -315,7 +310,9 @@ public class ProbenEditor extends AbstractApplyEditor {
                         }
                     }
 
-                    if (grenzWert != null && !grenzWert.equals(new Double(0.0))) {
+                    if (grenzWert != null
+                        && !grenzWert.equals(Double.valueOf(0.0))
+                    ) {
                         value = grenzWert;
                     }
                     break;
@@ -328,7 +325,7 @@ public class ProbenEditor extends AbstractApplyEditor {
                         if (DatabaseQuery.isKlaerschlammProbe(this.probe)) {
                             if (pos.getParameter().getKlaerschlammGw() != null) {
                                 if (!pos.getParameter().getKlaerschlammGw()
-                                    .equals(new Double(0.0))) {
+                                    .equals(Double.valueOf(0.0))) {
                                     tmpVal = pos.getWert().doubleValue()
                                         / pos.getParameter()
                                             .getKlaerschlammGw().doubleValue();
@@ -338,7 +335,7 @@ public class ProbenEditor extends AbstractApplyEditor {
                             DatabaseConstants.ATL_PROBEART_ID_SIELHAUT)) {
                             if (pos.getParameter().getSielhautGw() != null) {
                                 if (!pos.getParameter().getSielhautGw()
-                                    .equals(new Double(0.0))) {
+                                    .equals(Double.valueOf(0.0))) {
                                     tmpVal = pos.getWert().doubleValue()
                                         / pos.getParameter().getSielhautGw()
                                             .doubleValue();
@@ -376,10 +373,9 @@ public class ProbenEditor extends AbstractApplyEditor {
         }
 
         @Override
-        public void editObject(Object objectAtRow, int columnIndex,
-            Object newValue) {
-            Analyseposition tmp = (Analyseposition) objectAtRow;
-
+        public void editObject(
+            Analyseposition tmp, int columnIndex, Object newValue
+        ) {
             switch (columnIndex) {
                 case 0:
                     Parameter tmpPara = (Parameter) newValue;
@@ -442,7 +438,7 @@ public class ProbenEditor extends AbstractApplyEditor {
         }
 
         @Override
-        public Object newObject() {
+        public Analyseposition newObject() {
             Analyseposition tmp = new Analyseposition();
             tmp.setProbenahme(this.probe);
             if (DatabaseQuery.isKlaerschlammProbe(this.probe)
@@ -454,7 +450,7 @@ public class ProbenEditor extends AbstractApplyEditor {
             }
             tmp.setParameter((Parameter) ProbenEditor.this.parameterBox
                 .getSelectedItem());
-            tmp.setWert(new Float(0));
+            tmp.setWert(0f);
 			if (tmp.getParameter() != null) {
 				tmp.setEinheiten(tmp.getParameter().getEinheiten());
 			}
@@ -478,12 +474,11 @@ public class ProbenEditor extends AbstractApplyEditor {
 
             pos.setProbenahme(this.probe);
             pos.setParameter(parameter);
-            pos.setWert(new Float(0));
+            pos.setWert(0f);
             pos.setEinheiten(parameter
                 .getEinheiten());
             pos.setMapElkaAnalysemethode(MapElkaAnalysemethode.findById(1));
 
-//            getList().add(pos);
             List<Analyseposition> list = (List<Analyseposition>) getList();
             list.add(pos);
 
@@ -507,7 +502,7 @@ public class ProbenEditor extends AbstractApplyEditor {
 
             pos.setProbenahme(this.probe);
             pos.setParameter(parameter);
-            pos.setWert(new Float(0));
+            pos.setWert(0f);
             pos.setEinheiten(einheit);
             pos.setAnalyseVon(analysevon);
             pos.setMapElkaAnalysemethode(MapElkaAnalysemethode.findById(1));
@@ -545,8 +540,7 @@ public class ProbenEditor extends AbstractApplyEditor {
         }
 
         @Override
-        public boolean objectRemoved(Object objectAtRow) {
-            Analyseposition tmp = (Analyseposition) objectAtRow;
+        public boolean objectRemoved(Analyseposition tmp) {
             tmp.setMapElkaAnalysemethode(MapElkaAnalysemethode.findById(1));
 
             if(tmp.getId() == null) {
@@ -597,7 +591,7 @@ public class ProbenEditor extends AbstractApplyEditor {
 
     private Dimension minimumSize;
 
-    private JComboBox vorgangsstatusBox;
+    private JComboBox<Status> vorgangsstatusBox;
     private JButton statusHoch;
     private TextFieldDateChooser datum;
     private JFormattedTextField uhrzeitVon;
@@ -610,7 +604,7 @@ public class ProbenEditor extends AbstractApplyEditor {
     private JLabel rechnungsBetrag;
     private JTextArea bemerkungsArea;
 
-    private JComboBox sachbearbeiterBox;
+    private JComboBox<Sachbearbeiter> sachbearbeiterBox;
     private JButton bescheidDrucken;
     private JButton auftragDrucken;
     private JFileChooser dateiChooser;
@@ -620,10 +614,10 @@ public class ProbenEditor extends AbstractApplyEditor {
     private TextFieldDateChooser icpDatum;
     private JTable parameterTabelle;
 
-    private JComboBox parameterBox;
-    private JComboBox einheitenBox;
-    private JComboBox analysevonBox;
-    private JComboBox methodeBox;
+    private JComboBox<Parameter> parameterBox;
+    private JComboBox<Einheiten> einheitenBox;
+    private JComboBox<String> analysevonBox;
+    private JComboBox<MapElkaAnalysemethode> methodeBox;
 
     private ParameterModel parameterModel;
     private boolean isNew;
@@ -784,13 +778,13 @@ public class ProbenEditor extends AbstractApplyEditor {
                         .getBescheidDataSource(probe);
 
                     PDFExporter.getInstance().exportBescheid(params, subdata,
-                        PDFExporter.BESCHEID, path.getAbsolutePath(), true);
+                        PDFExporter.BESCHEID, path.getAbsolutePath());
 
                     JRDataSource vSubdata = DatabaseQuery
                         .getBescheidDataSource(probe);
 
                     PDFExporter.getInstance().exportBescheid(params, vSubdata,
-                        PDFExporter.VFG, vPath.getAbsolutePath(), true);
+                        PDFExporter.VFG, vPath.getAbsolutePath());
 
                     if (!(getVorgangsstatus().equals(
                         DatabaseConstants.ATL_STATUS_BESCHEID_GEDRUCKT))) {
@@ -858,9 +852,9 @@ public class ProbenEditor extends AbstractApplyEditor {
         bezug = new JTextField();
         beteiligte = new JTextField();
         probenummer = new JTextField();
-        vorgangsstatusBox = new JComboBox();
+        vorgangsstatusBox = new JComboBox<>();
         statusHoch = new JButton("erhöhen");
-        sachbearbeiterBox = new JComboBox();
+        sachbearbeiterBox = new JComboBox<>();
         icpEinwaageFeld = new DoubleField(0);
         icpDatum = new TextFieldDateChooser();
         bemerkungsArea = new LimitedTextArea(255);
@@ -868,9 +862,9 @@ public class ProbenEditor extends AbstractApplyEditor {
         parameterTabelle = new JTable();
 
         vorgangsstatusBox.setModel(
-            new DefaultComboBoxModel(DatabaseQuery.getStatus()));
+            new DefaultComboBoxModel<>(DatabaseQuery.getStatus()));
 
-        sachbearbeiterBox.setModel(new DefaultComboBoxModel(
+        sachbearbeiterBox.setModel(new DefaultComboBoxModel<>(
             DatabaseQuery.getEnabledSachbearbeiter()));
         sachbearbeiterBox.setBorder(BorderFactory.createLineBorder(Color.LIGHT_GRAY));
         sachbearbeiterBox.setEditable(true);
@@ -1248,7 +1242,7 @@ public class ProbenEditor extends AbstractApplyEditor {
 
         Parameter[] parameter = DatabaseQuery.getGroupedParameter();
 
-        parameterBox = new JComboBox(parameter);
+        parameterBox = new JComboBox<>(parameter);
         parameterBox.setEditable(false);
 
         parameterBox.addFocusListener(new FocusAdapter() {
@@ -1259,7 +1253,7 @@ public class ProbenEditor extends AbstractApplyEditor {
         });
 
         parameterColumn.setCellEditor(new DefaultCellEditor(parameterBox));
-        parameterColumn.setCellRenderer(new ComboBoxRenderer());
+        parameterColumn.setCellRenderer(new ComboBoxRenderer<>());
 
         //Werte
         TableColumn gkColumn = this.parameterTabelle.getColumnModel()
@@ -1277,7 +1271,7 @@ public class ProbenEditor extends AbstractApplyEditor {
             .getColumn(3);
         einheitenColumn.setPreferredWidth(40);
 
-        einheitenBox = new JComboBox(DatabaseQuery.getEinheiten());
+        einheitenBox = new JComboBox<>(DatabaseQuery.getEinheiten());
         einheitenBox.setEditable(false);
         einheitenBox.addFocusListener(new FocusAdapter() {
             @Override
@@ -1288,14 +1282,14 @@ public class ProbenEditor extends AbstractApplyEditor {
         einheitenBox.setBorder(BorderFactory.createEmptyBorder());
 
         einheitenColumn.setCellEditor(new DefaultCellEditor(einheitenBox));
-        einheitenColumn.setCellRenderer(new ComboBoxRenderer());
+        einheitenColumn.setCellRenderer(new ComboBoxRenderer<>());
 
         // Methode
         TableColumn methodeColumn = this.parameterTabelle.getColumnModel()
             .getColumn(4);
         methodeColumn.setPreferredWidth(200);
 
-        methodeBox = new JComboBox(DatabaseQuery.getMapElkaAnalysemethode());
+        methodeBox = new JComboBox<>(DatabaseQuery.getMapElkaAnalysemethode());
         methodeBox.setEditable(false);
         methodeBox.addFocusListener(new FocusAdapter() {
             @Override
@@ -1306,7 +1300,7 @@ public class ProbenEditor extends AbstractApplyEditor {
         methodeBox.setBorder(BorderFactory.createEmptyBorder());
 
         methodeColumn.setCellEditor(new DefaultCellEditor(methodeBox));
-        methodeColumn.setCellRenderer(new ComboBoxRenderer());
+        methodeColumn.setCellRenderer(new ComboBoxRenderer<>());
 
         // Analyse von
         TableColumn analyseColumn = this.parameterTabelle.getColumnModel()
@@ -1316,7 +1310,7 @@ public class ProbenEditor extends AbstractApplyEditor {
         String[] analyse_von_auswahl = {"700.44", "360.33", "OWL-Umwelt", "Stadtwerke GT", "AGROLAB", "HBICON",
                 "Dr. Kludas", "Fresenius", "E-Satzung"};
 
-        analysevonBox = new JComboBox(analyse_von_auswahl);
+        analysevonBox = new JComboBox<>(analyse_von_auswahl);
         analysevonBox.setEditable(true);
         analysevonBox.addFocusListener(new FocusAdapter() {
             @Override
@@ -1327,7 +1321,7 @@ public class ProbenEditor extends AbstractApplyEditor {
         analysevonBox.setBorder(BorderFactory.createEmptyBorder());
 
         analyseColumn.setCellEditor(new DefaultCellEditor(this.analysevonBox));
-        analyseColumn.setCellRenderer(new ComboBoxRenderer());
+        analyseColumn.setCellRenderer(new ComboBoxRenderer<>());
 
         //Grenzwert
         TableColumn gwColumn = this.parameterTabelle.getColumnModel()
@@ -1367,7 +1361,8 @@ public class ProbenEditor extends AbstractApplyEditor {
     }
 
     protected Sachbearbeiter getSachbearbeiter() {
-        ComboBoxModel model = this.sachbearbeiterBox.getModel();
+        ComboBoxModel<Sachbearbeiter> model
+            = this.sachbearbeiterBox.getModel();
 
         return (Sachbearbeiter) model.getSelectedItem();
     }
@@ -1671,10 +1666,8 @@ public class ProbenEditor extends AbstractApplyEditor {
     /**
      * Diese Funktion liefert die Anzahl der beteiligten Probenehmer.
      */
-    protected Integer getAnzahl() {
-        Integer anzahl = new Integer(this.beteiligte.getText());
-
-        return anzahl;
+    protected int getAnzahl() {
+        return Integer.parseInt(this.beteiligte.getText());
     }
 
     /**
@@ -1991,17 +1984,6 @@ class ParameterChooser extends OkCancelApplyDialog {
 
             ergebnisTabelle.addFocusListener(TableFocusListener
                 .getInstance());
-            ergebnisTabelle.addMouseListener(new MouseAdapter() {
-                @Override
-                public void mouseClicked(java.awt.event.MouseEvent e) {
-                    if ((e.getClickCount() == 2) && (e.getButton() == 1)) {
-                        // TODO: Check this: Nothing happens here
-//                        Point origin = e.getPoint();
-//                        int row = ergebnisTabelle.rowAtPoint(origin);
-                    }
-                }
-            });
-
         }
 
         return ergebnisTabelle;
@@ -2009,7 +1991,7 @@ class ParameterChooser extends OkCancelApplyDialog {
 
 }
 
-class ParameterAuswahlModel extends ListTableModel {
+class ParameterAuswahlModel extends ListTableModel<Parameter> {
     /** Logging */
     private static final AuikLogger log = AuikLogger.getLogger();
     private static final long serialVersionUID = -502436804713980533L;
@@ -2020,7 +2002,7 @@ class ParameterAuswahlModel extends ListTableModel {
     }
 
     @Override
-    public void setList(List<?> newList) {
+    public void setList(List<Parameter> newList) {
         super.setList(newList);
 
         selection = new boolean[newList.size()];
@@ -2049,7 +2031,7 @@ class ParameterAuswahlModel extends ListTableModel {
      * (java.lang.Object, int)
      */
     @Override
-    public Object getColumnValue(Object objectAtRow, int columnIndex) {
+    public Object getColumnValue(Parameter objectAtRow, int columnIndex) {
         // we don't need this method
         return null;
     }
@@ -2058,10 +2040,9 @@ class ParameterAuswahlModel extends ListTableModel {
     public Object getValueAt(int row, int col) {
         if (rowExists(row)) {
             if (col < this.columns.length) {
-
                 switch (col) {
                     case 0:
-                        return new Boolean(this.selection[row]);
+                        return Boolean.valueOf(this.selection[row]);
                     case 1:
                         Parameter p = (Parameter) getObjectAtRow(row);
                         return p.getBezeichnung();
