@@ -103,24 +103,17 @@ package de.bielefeld.umweltamt.aui.module.objektpanels;
 
 import java.awt.Point;
 import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
 import java.awt.event.KeyEvent;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
-import java.text.DateFormat;
-import java.text.ParseException;
 import java.util.ArrayList;
-import java.util.Date;
-import java.util.List;
 
 import javax.swing.AbstractAction;
 import javax.swing.Action;
-import javax.swing.JButton;
 import javax.swing.JMenuItem;
 import javax.swing.JPanel;
 import javax.swing.JPopupMenu;
 import javax.swing.JScrollPane;
-import javax.swing.JSplitPane;
 import javax.swing.JTable;
 import javax.swing.KeyStroke;
 import javax.swing.ListSelectionModel;
@@ -130,22 +123,16 @@ import javax.swing.table.TableColumn;
 import com.jgoodies.forms.builder.PanelBuilder;
 import com.jgoodies.forms.layout.CellConstraints;
 import com.jgoodies.forms.layout.FormLayout;
-import de.bielefeld.umweltamt.aui.utils.ComponentFactory;
 
 import de.bielefeld.umweltamt.aui.GUIManager;
-import de.bielefeld.umweltamt.aui.HauptFrame;
-import de.bielefeld.umweltamt.aui.mappings.DatabaseQuery;
 import de.bielefeld.umweltamt.aui.mappings.indeinl.Anh49Abscheiderdetails;
 import de.bielefeld.umweltamt.aui.mappings.indeinl.Anh49Fachdaten;
 import de.bielefeld.umweltamt.aui.module.BasisObjektBearbeiten;
 import de.bielefeld.umweltamt.aui.module.common.editors.AbscheiderEditor;
+import de.bielefeld.umweltamt.aui.module.common.tablemodels.Anh49AbscheiderModel;
 import de.bielefeld.umweltamt.aui.utils.AuikLogger;
-import de.bielefeld.umweltamt.aui.utils.AuikUtils;
-import de.bielefeld.umweltamt.aui.utils.SelectTable;
 import de.bielefeld.umweltamt.aui.utils.TabAction;
 import de.bielefeld.umweltamt.aui.utils.TableFocusListener;
-import de.bielefeld.umweltamt.aui.utils.tablemodelbase.EditableListTableModel;
-import de.bielefeld.umweltamt.aui.utils.tablemodelbase.ListTableModel;
 
 /**
  * Das Abscheiderdetails-Tab beim Objekt bearbeiten
@@ -160,89 +147,6 @@ public class Anh49DetailsPanel extends JPanel {
      */
     /** Logging */
     private static final AuikLogger log = AuikLogger.getLogger();
-
-    private class Anh49AbscheiderModel extends ListTableModel {
-        private static final long serialVersionUID = 6154019963876247085L;
-        private Anh49Fachdaten fachdaten;
-
-        /**
-         * Erzeugt ein neues Abscheider-TableModel. Dieses hat die Spalten
-         * "Abscheider", "Von", "Lage" und "Bemerkung".
-         */
-        public Anh49AbscheiderModel() {
-            super(new String[] {"Abscheider", "Von", "Lage", "Nenngröße", "Hersteller", "Bemerkung"},
-                false, true);
-        }
-
-        /**
-         * Setzt das Fachdatenobjekt, nach dessen Abscheider-Details gesucht
-         * werden soll.
-         * @param fachdaten Das Anhang49-Fachdatenobjekt
-         */
-        public void setFachdaten(Anh49Fachdaten fachdaten) {
-            this.fachdaten = fachdaten;
-            updateList();
-        }
-
-        @Override
-        public Object getColumnValue(Object objectAtRow, int columnIndex) {
-            Anh49Abscheiderdetails details = (Anh49Abscheiderdetails) objectAtRow;
-
-            Object tmp;
-
-            switch (columnIndex) {
-                case 0:
-                    tmp = details.getAbscheidernr();
-                    break;
-                case 1:
-                    tmp = details.getVon();
-                    break;
-                case 2:
-                    tmp = details.getLage();
-                    break;
-                case 3:
-                    tmp = details.getNenngroesse();
-                    break;
-                case 4:
-                    tmp = details.getHersteller();
-                    break;
-                case 5:
-                    tmp = details.getBemerkung();
-                    break;
-                default:
-                    tmp = null;
-            }
-
-            return tmp;
-        }
-
-        @Override
-        public boolean objectRemoved(Object objectAtRow) {
-            Anh49Abscheiderdetails removedAbsch = (Anh49Abscheiderdetails) objectAtRow;
-            boolean removed;
-
-            if (removedAbsch.getId() != null) {
-                removed = Anh49Abscheiderdetails.delete(removedAbsch);
-            } else {
-                removed = true;
-            }
-
-            return removed;
-        }
-
-        @Override
-        public void updateList() {
-            if (fachdaten != null) {
-            	List<Anh49Abscheiderdetails>  x = DatabaseQuery.getAbscheiderDetails(fachdaten);
-                setList(x);
-            }
-            fireTableDataChanged();
-        }
-
-        public Anh49Abscheiderdetails getRow(int rowIndex) {
-            return (Anh49Abscheiderdetails) getObjectAtRow(rowIndex);
-        }
-    }
 
     private String name;
 
@@ -304,7 +208,7 @@ public class Anh49DetailsPanel extends JPanel {
                     if (row != -1
                         && getAbscheiderTabelle().getEditingRow() == -1) {
                         Anh49Abscheiderdetails abscheider = abscheiderModel
-                            .getRow(row);
+                            .getObjectAtRow(row);
 
                         if (GUIManager
                             .getInstance()
@@ -323,7 +227,7 @@ public class Anh49DetailsPanel extends JPanel {
                     }
                 }
             };
-            abscheiderLoeschAction.putValue(Action.MNEMONIC_KEY, new Integer(
+            abscheiderLoeschAction.putValue(Action.MNEMONIC_KEY, Integer.valueOf(
                 KeyEvent.VK_L));
             abscheiderLoeschAction.putValue(Action.ACCELERATOR_KEY,
                 KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, 0, false));
@@ -344,7 +248,7 @@ public class Anh49DetailsPanel extends JPanel {
                     editAbscheider(neuerAbscheider);
                 }
             };
-            abscheiderNeuAction.putValue(Action.MNEMONIC_KEY, new Integer(
+            abscheiderNeuAction.putValue(Action.MNEMONIC_KEY, Integer.valueOf(
                 KeyEvent.VK_N));
             // abscheiderNeuAction.putValue(Action.ACCELERATOR_KEY,
             // KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, 0, false));
